--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 		"laravel/framework": "4.1.*", 
 		"loic-sharma/profiler": "1.1.*",
 		"cartalyst/sentry":"2.1.*",
-		"way/generators": "dev-master"
+		"way/generators": "dev-master",
+		"cviebrock/eloquent-sluggable": "1.0.*"
 	},
 	"autoload": {
 		"classmap": [
