--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		"loic-sharma/profiler": "1.1.*",
 		"cartalyst/sentry":"2.1.*",
 		"way/generators": "dev-master",
-		"cviebrock/eloquent-sluggable": "1.0.*"
+		"cviebrock/eloquent-sluggable": "1.0.*",
+		"lakedawson/vocal": "0.1.*"
 	},
 	"autoload": {
 		"classmap": [
